retter i nav-menu

--- a/header_footer.html
+++ b/header_footer.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="assets/img/logo-favicon/favicon.ico" />
+    <link rel="icon" href="assets/img/logo-favicon/" />
 
     <link rel="stylesheet" href="css/header_footer.css" />
     <title>Header og footer</title>
@@ -18,8 +18,10 @@
 
         <nav class="nav-menu">
           <ul>
-            <li><a href="productlist.html">Beauty</a></li>
-            <li><a href="productlist.html">Fragrances</a></li>
+            <li><a href="productlist.html?category=Beauty">Beauty</a></li>
+            <li>
+              <a href="productlist.html?category=Fragrances">Fragrances</a>
+            </li>
             <li>
               <a href="index.html" class="logo">
                 <img src="assets/img/logo-favicon/logo.webp" alt="Logo Kocha" />
