ændrer i our vision teksten

--- a/index.html
+++ b/index.html
@@ -90,19 +90,11 @@
           <h2>Our vision</h2>
 
           <p class="main-text">
-            At Kocha, we believe that beauty should be accessible, inspiring,
-            and fun. Our mission is to create an online space where beauty
-            lovers can explore quality products without breaking the bank. We
-            cater to young women who are passionate about self-care but also
-            value affordability. Whether you’re a makeup enthusiast, a skincare
-            lover, or just looking for the perfect lipstick, our curated
-            selection brings you the best products from various brands at
-            budget-friendly prices. More than just a shop, Kocha is an
-            experience. We want our visitors to feel inspired, empowered, and
-            excited every time they browse our site. With a stylish and playful
-            design, easy navigation, and exclusive deals, we’re here to make
-            beauty shopping effortless and enjoyable. Join us in redefining
-            beauty—your way.
+            At Kocha, we believe that beauty should be inspiring, accessible, and most importantly, fun! Our mission is to offer a curated selection of high-quality beauty products that won’t break the bank. We’re here for the modern woman who loves self-care and wants to indulge in the best beauty essentials without the hefty price tag.
+
+From makeup must-haves to skincare saviors and that perfect lipstick, our carefully chosen collection features top brands at budget-friendly prices. Whether you're looking to try something new or restock your favorites, Kocha has something for everyone. Kocha isn’t just a store—it’s an experience. We’re dedicated to making you feel inspired, empowered, and excited every time you visit.
+
+Join us and redefine beauty—your way, with products that make you feel confident and radiant, every day.
           </p>
         </div>
         <img
