update virker med kategori

--- a/productlist.html
+++ b/productlist.html
@@ -6,6 +6,11 @@
     <title>Product List</title>
     <link rel="stylesheet" href="css/productlist.css" />
     <link rel="stylesheet" href="css/header_footer.css" />
+    <link
+      rel="icon"
+      href="assets/img/logo-favicon/favicon.ico"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <header>
