--- a/singleproduct.html
+++ b/singleproduct.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/singleproduct.css" />
     <link rel="stylesheet" href="css/header_footer.css" />
+    <link
+      rel="icon"
+      href="assets/img/logo-favicon/favicon.ico"
+      type="image/x-icon"
+    />
     <title>Product</title>
   </head>
   <body>
