--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <div class="header-text">
       <h5>Welcome</h4>
       <h6>Your beauty your way</h5>
+        <h1>hej</h1>
     </div>
 </div>
 
