updatere header i index.html

--- a/index.html
+++ b/index.html
@@ -10,41 +10,43 @@
   </head>
   <body>
     <header>
-      <!-- Burger Menu -->
-      <div>
-        <input type="checkbox" id="burger-toggle" />
-        <label for="burger-toggle" class="burger-menu">☰</label>
-
-        <nav class="nav-menu">
-          <ul>
-            <li><a href="productlist.html?category=beauty">Beauty</a></li>
-            <li><a href="productlist.html?category=fragrance">Fragrance</a></li>
-            <li>
-              <a href="index.html" class="logo">
-                <img src="assets/img/logo-favicon/logo.webp" alt="Logo Kocha" />
-              </a>
-            </li>
-            <li><a href="#">News</a></li>
-          </ul>
-        </nav>
-      </div>
-
-      <!-- Logo -->
-      <div>
-        <a href="index.html" class="logo2">
-          <img src="assets/img/logo-favicon/logo.webp" alt="Logo Kocha" />
-        </a>
-      </div>
-
-      <!-- Shopping Bag Icon -->
-      <div>
-        <img
-          src="assets/img/Iconer/shopping-bag.svg"
-          alt="Shopping bag"
-          class="shopping-icon"
-        />
-      </div>
-    </header>
+        <!-- Burger Menu -->
+        <div>
+          <input type="checkbox" id="burger-toggle" />
+          <label for="burger-toggle" class="burger-menu">☰</label>
+  
+          <nav class="nav-menu">
+            <ul>
+              <li><a href="productlist.html?category=Beauty">Beauty</a></li>
+              <li>
+                <a href="productlist.html?category=Fragrances">Fragrances</a>
+              </li>
+              <li>
+                <a href="index.html" class="logo">
+                  <img src="assets/img/logo-favicon/logo.webp" alt="Logo Kocha" />
+                </a>
+              </li>
+              <li><a href="#">News</a></li>
+            </ul>
+          </nav>
+        </div>
+  
+        <!-- Logo til mobil-->
+        <div>
+          <a href="index.html" class="logo2">
+            <img src="assets/img/logo-favicon/logo.webp" alt="Logo Kocha" />
+          </a>
+        </div>
+  
+        <!-- Shopping Bag -->
+        <div>
+          <img
+            src="assets/img/Iconer/shopping-bag.svg"
+            alt="Shopping bag"
+            class="shopping-icon"
+          />
+        </div>
+      </header>
 <div class="text-container">
     <img
       src="assets/img/forside-img.svg"
@@ -54,7 +56,6 @@
     <div class="header-text">
       <h5>Welcome</h4>
       <h6>Your beauty your way</h5>
-        <h1>hej</h1>
     </div>
 </div>
 
