--- a/singleproduct.html
+++ b/singleproduct.html
@@ -21,8 +21,10 @@
 
         <nav class="nav-menu">
           <ul>
-            <li><a href="productlist.html">Beauty</a></li>
-            <li><a href="productlist.html">Fragrances</a></li>
+            <li><a href="productlist.html?category=Beauty">Beauty</a></li>
+            <li>
+              <a href="productlist.html?category=Fragrances">Fragrances</a>
+            </li>
             <li>
               <a href="index.html" class="logo">
                 <img src="assets/img/logo-favicon/logo.webp" alt="Logo Kocha" />
