heder_footer done

--- a/header_footer.html
+++ b/header_footer.html
@@ -55,85 +55,7 @@
       class="header-image"
     />
 
-    <main>
-      <h1>Overskrift</h1>
-      <p>hej</p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo
-        recusandae harum itaque quos animi odio ipsam dolorem eos aut aspernatur
-        quibusdam ab, saepe magni nam doloremque, necessitatibus quis placeat,
-        esse eligendi nostrum libero omnis aliquam? Deleniti assumenda iste
-        incidunt. Sint dolorum praesentium magni? Voluptatem consectetur ad
-        incidunt ipsum atque architecto modi dolorem totam impedit tempore?
-        Mollitia iure tempora provident quae corporis officiis, esse libero
-        ducimus error voluptates corrupti saepe beatae illum, sed ullam veniam
-        delectus quod vero natus quasi nobis dolorem autem soluta in. Ex earum
-        nihil eligendi minima libero consequatur molestiae suscipit id totam
-        magnam obcaecati, incidunt sed ipsam esse fugiat! Aliquid vero quisquam
-        quod. Officia exercitationem ducimus dicta quaerat repudiandae ratione
-        architecto, perferendis voluptatem unde beatae aspernatur? Quibusdam
-        incidunt velit molestiae quaerat facere dolor distinctio sequi cum autem
-        praesentium, perspiciatis facilis commodi in tempore, animi natus
-        nesciunt? Delectus animi suscipit placeat tenetur quod nobis impedit id
-        perferendis veritatis veniam illo minus, adipisci corporis excepturi in
-        assumenda voluptas. Saepe omnis, perferendis consequuntur dolor a
-        expedita assumenda ipsa officiis, reprehenderit laborum, quibusdam
-        dicta! Officiis excepturi ratione perferendis illum soluta deserunt
-        pariatur impedit totam, eos consequuntur, aliquid sit amet repudiandae
-        quo atque possimus. Atque saepe voluptates accusamus temporibus deleniti
-        consectetur ullam.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo
-        recusandae harum itaque quos animi odio ipsam dolorem eos aut aspernatur
-        quibusdam ab, saepe magni nam doloremque, necessitatibus quis placeat,
-        esse eligendi nostrum libero omnis aliquam? Deleniti assumenda iste
-        incidunt. Sint dolorum praesentium magni? Voluptatem consectetur ad
-        incidunt ipsum atque architecto modi dolorem totam impedit tempore?
-        Mollitia iure tempora provident quae corporis officiis, esse libero
-        ducimus error voluptates corrupti saepe beatae illum, sed ullam veniam
-        delectus quod vero natus quasi nobis dolorem autem soluta in. Ex earum
-        nihil eligendi minima libero consequatur molestiae suscipit id totam
-        magnam obcaecati, incidunt sed ipsam esse fugiat! Aliquid vero quisquam
-        quod. Officia exercitationem ducimus dicta quaerat repudiandae ratione
-        architecto, perferendis voluptatem unde beatae aspernatur? Quibusdam
-        incidunt velit molestiae quaerat facere dolor distinctio sequi cum autem
-        praesentium, perspiciatis facilis commodi in tempore, animi natus
-        nesciunt? Delectus animi suscipit placeat tenetur quod nobis impedit id
-        perferendis veritatis veniam illo minus, adipisci corporis excepturi in
-        assumenda voluptas. Saepe omnis, perferendis consequuntur dolor a
-        expedita assumenda ipsa officiis, reprehenderit laborum, quibusdam
-        dicta! Officiis excepturi ratione perferendis illum soluta deserunt
-        pariatur impedit totam, eos consequuntur, aliquid sit amet repudiandae
-        quo atque possimus. Atque saepe voluptates accusamus temporibus deleniti
-        consectetur ullam.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo
-        recusandae harum itaque quos animi odio ipsam dolorem eos aut aspernatur
-        quibusdam ab, saepe magni nam doloremque, necessitatibus quis placeat,
-        esse eligendi nostrum libero omnis aliquam? Deleniti assumenda iste
-        incidunt. Sint dolorum praesentium magni? Voluptatem consectetur ad
-        incidunt ipsum atque architecto modi dolorem totam impedit tempore?
-        Mollitia iure tempora provident quae corporis officiis, esse libero
-        ducimus error voluptates corrupti saepe beatae illum, sed ullam veniam
-        delectus quod vero natus quasi nobis dolorem autem soluta in. Ex earum
-        nihil eligendi minima libero consequatur molestiae suscipit id totam
-        magnam obcaecati, incidunt sed ipsam esse fugiat! Aliquid vero quisquam
-        quod. Officia exercitationem ducimus dicta quaerat repudiandae ratione
-        architecto, perferendis voluptatem unde beatae aspernatur? Quibusdam
-        incidunt velit molestiae quaerat facere dolor distinctio sequi cum autem
-        praesentium, perspiciatis facilis commodi in tempore, animi natus
-        nesciunt? Delectus animi suscipit placeat tenetur quod nobis impedit id
-        perferendis veritatis veniam illo minus, adipisci corporis excepturi in
-        assumenda voluptas. Saepe omnis, perferendis consequuntur dolor a
-        expedita assumenda ipsa officiis, reprehenderit laborum, quibusdam
-        dicta! Officiis excepturi ratione perferendis illum soluta deserunt
-        pariatur impedit totam, eos consequuntur, aliquid sit amet repudiandae
-        quo atque possimus. Atque saepe voluptates accusamus temporibus deleniti
-        consectetur ullam.
-      </p>
-    </main>
+    <main></main>
 
     <footer>
       <div class="footer-info">
