--- a/productlist.html
+++ b/productlist.html
@@ -54,11 +54,11 @@
 
     <main id="productlist">
       <div class="fixed-icon left-icon">
-        <img src="assets/img/Iconer/specialStar.webp" alt="stars" />
+        <img src="assets/img/iconer/specialStar.webp" alt="stars" />
       </div>
 
       <div class="fixed-icon right-icon">
-        <img src="assets/img/Iconer/rainbow.webp" alt="rainbow" />
+        <img src="assets/img/iconer/rainbow.webp" alt="rainbow" />
       </div>
       <h1 class="product-category"></h1>
 
@@ -120,6 +120,7 @@
           />
         </div>
       </div>
+    </footer>
     <script src="js/productslist.js"></script>
     <script src="js/header_footer.js"></script>
   </body>
