--- a/index.html
+++ b/index.html
@@ -10,54 +10,54 @@
   </head>
   <body>
     <header>
-        <!-- Burger Menu -->
-        <div>
-          <input type="checkbox" id="burger-toggle" />
-          <label for="burger-toggle" class="burger-menu">☰</label>
-  
-          <nav class="nav-menu">
-            <ul>
-              <li><a href="productlist.html?category=Beauty">Beauty</a></li>
-              <li>
-                <a href="productlist.html?category=Fragrances">Fragrances</a>
-              </li>
-              <li>
-                <a href="index.html" class="logo">
-                  <img src="assets/img/logo-favicon/logo.webp" alt="Logo Kocha" />
-                </a>
-              </li>
-              <li><a href="#">News</a></li>
-            </ul>
-          </nav>
-        </div>
-  
-        <!-- Logo til mobil-->
-        <div>
-          <a href="index.html" class="logo2">
-            <img src="assets/img/logo-favicon/logo.webp" alt="Logo Kocha" />
-          </a>
-        </div>
-  
-        <!-- Shopping Bag -->
-        <div>
-          <img
-            src="assets/img/Iconer/shopping-bag.svg"
-            alt="Shopping bag"
-            class="shopping-icon"
-          />
-        </div>
-      </header>
-<div class="text-container">
-    <img
-      src="assets/img/forside-img.svg"
-      alt="forside-img"
-      class="header-image"
-    />
-    <div class="header-text">
-      <h5>Welcome</h4>
-      <h6>Your beauty your way</h5>
+      <!-- Burger Menu -->
+      <div>
+        <input type="checkbox" id="burger-toggle" />
+        <label for="burger-toggle" class="burger-menu">☰</label>
+
+        <nav class="nav-menu">
+          <ul>
+            <li><a href="productlist.html?category=Beauty">Beauty</a></li>
+            <li>
+              <a href="productlist.html?category=Fragrances">Fragrances</a>
+            </li>
+            <li>
+              <a href="index.html" class="logo">
+                <img src="assets/img/logo-favicon/logo.webp" alt="Logo Kocha" />
+              </a>
+            </li>
+            <li><a href="#">News</a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <!-- Logo til mobil-->
+      <div>
+        <a href="index.html" class="logo2">
+          <img src="assets/img/logo-favicon/logo.webp" alt="Logo Kocha" />
+        </a>
+      </div>
+
+      <!-- Shopping Bag -->
+      <div>
+        <img
+          src="assets/img/Iconer/shopping-bag.svg"
+          alt="Shopping bag"
+          class="shopping-icon"
+        />
+      </div>
+    </header>
+    <div class="text-container">
+      <img
+        src="assets/img/forside-img.svg"
+        alt="forside-img"
+        class="header-image"
+      />
+      <div class="header-text">
+        <h5>Welcome</h5>
+        <h6>Your beauty your way</h6>
+      </div>
     </div>
-</div>
 
     <main>
       <div class="icon-container">
@@ -67,11 +67,7 @@
           alt="icon"
         />
         <h1>Favorits</h1>
-        <img
-          class="icon2"
-          src="assets/img/Iconer/rainbow.webp"
-          alt="icon"
-        />
+        <img class="icon2" src="assets/img/Iconer/rainbow.webp" alt="icon" />
       </div>
 
       <section class="product_list_container"></section>
@@ -92,11 +88,19 @@
           <h2>Our vision</h2>
 
           <p class="main-text">
-            At Kocha, we believe that beauty should be inspiring, accessible, and most importantly, fun! Our mission is to offer a curated selection of high-quality beauty products that won’t break the bank. We’re here for the modern woman who loves self-care and wants to indulge in the best beauty essentials without the hefty price tag.
-
-From makeup must-haves to skincare saviors and that perfect lipstick, our carefully chosen collection features top brands at budget-friendly prices. Whether you're looking to try something new or restock your favorites, Kocha has something for everyone. Kocha isn’t just a store—it’s an experience. We’re dedicated to making you feel inspired, empowered, and excited every time you visit.
-
-Join us and redefine beauty—your way, with products that make you feel confident and radiant, every day.
+            At Kocha, we believe that beauty should be inspiring, accessible,
+            and most importantly, fun! Our mission is to offer a curated
+            selection of high-quality beauty products that won’t break the bank.
+            We’re here for the modern woman who loves self-care and wants to
+            indulge in the best beauty essentials without the hefty price tag.
+            From makeup must-haves to skincare saviors and that perfect
+            lipstick, our carefully chosen collection features top brands at
+            budget-friendly prices. Whether you're looking to try something new
+            or restock your favorites, Kocha has something for everyone. Kocha
+            isn’t just a store—it’s an experience. We’re dedicated to making you
+            feel inspired, empowered, and excited every time you visit. Join us
+            and redefine beauty—your way, with products that make you feel
+            confident and radiant, every day.
           </p>
         </div>
         <img
