--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/header_footer.css" />
     <link rel="stylesheet" href="https://use.typekit.net/mvo3ooo.css" />
+    <link
+      rel="icon"
+      href="assets/img/logo-favicon/favicon.ico"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <header>
