--- a/singleproduct.html
+++ b/singleproduct.html
@@ -60,6 +60,7 @@
         <img src="assets/img/Iconer/rainbow.webp" alt="rainbow" />
       </div>
       <section class="product_container"></section>
+      <section class="review_container"></section>
     </main>
     <footer>
       <section class="footer-info">
