--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </header>
     <div class="text-container">
       <img
-        src="assets/img/forside-img.svg"
+        src="assets/img/forside-img.webp"
         alt="forside-img"
         class="header-image"
       />
