retter form så den validerer

--- a/singleproduct.html
+++ b/singleproduct.html
@@ -72,6 +72,7 @@
             <div class="form-group">
               <label for="rating">Rating:</label>
               <select id="rating" required>
+                <option value="" disabled selected>Select Rating</option>
                 <option value="5">5 Stars</option>
                 <option value="4">4 Stars</option>
                 <option value="3">3 Stars</option>
