--- a/productlist.html
+++ b/productlist.html
@@ -69,12 +69,12 @@
           class="filter"
           aria-label="Sorteringsmuligheder"
         >
+          <option value="">Vælg sortering</option>
           <option value="low-to-high">Laveste til højeste pris</option>
           <option value="high-to-low">Højeste til laveste pris</option>
           <option value="under-10">Kun under 10 kr</option>
         </select>
       </div>
-
       <section class="product_list_container"></section>
     </main>
     <footer>
